<resources>
    <string name="app_name">Story App</string>
    <string name="password">Password</string>
    <string name="logo_dicoding">Dicoding Logo</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="hint_nama">Insert Your Name</string>
    <string name="judul_story">Story Title</string>
    <string name="description">Description</string>
    <string name="story_tidak_ditemukan">Story Not Found</string>
    <string name="add_story">Add Story</string>
    <string name="upload_berhasil">Successful Upload</string>
    <string name="upload_gagal">Upload Failed</string>
    <string name="pesan_pilih_gambar">Please enter the image file first</string>
    <string name="pesan_ijin">Not getting permission.</string>
    <string name="pilih_gambar">Choose a Picture</string>
    <string name="register_berhasil">Successful Register</string>
    <string name="register_gagal">Register Failed</string>
    <string name="login_berhasil">Successful Login</string>
    <string name="Login_gagal">Login Failed</string>
    <string name="pengaturan">Setting</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="detail_story">Detail Story</string>
    <string name="password_kurang">password must be more than 8 characters</string>
    <string name="masukkan_password">Enter your password</string>
    <string name="image_judul">image_title</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">retry</string>
    <string name="location">Location</string>
</resources>